--- a/src/pages/styles/index.css
+++ b/src/pages/styles/index.css
@@ -9,6 +9,7 @@ section.home-section .home .hero-container {
   color: #FFFFFF;
   align-items: center;
   height: calc(100vh - 100px);
+  overflow: hidden;
 }
 section.home-section .home .hero-container .desktop-lhs .hero-text {
   max-width: 25rem;
@@ -53,6 +54,11 @@ section.home-section .home .hero-container .desktop-lhs .hero-btns .watch-btn bu
 }
 section.home-section .home .hero-container .desktop-rhs {
   margin-left: 6.25rem;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+section.home-section .home .hero-container .desktop-rhs::-webkit-scrollbar {
+  display: none;
 }
 section.home-section .home .hero-container .desktop-rhs .lottie {
   width: 120%;
